--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,110 @@
-[]
+[
+    {
+        "key": "sb",
+        "value": "7W7-Zrs361QPN5PYjpTVzs48",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-22T10:23:18.415Z",
+        "lastAccessed": "2024-12-22T10:23:18.415Z"
+    },
+    {
+        "key": "datr",
+        "value": "7W7-Zg2akABlM-ADlV1qDfZn",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-22T10:23:18.415Z",
+        "lastAccessed": "2024-12-22T10:23:18.415Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B736x393x2.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-22T10:23:18.415Z",
+        "lastAccessed": "2024-12-22T10:23:18.415Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-22T10:23:18.415Z",
+        "lastAccessed": "2024-12-22T10:23:18.415Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-22T10:23:18.415Z",
+        "lastAccessed": "2024-12-22T10:23:18.415Z"
+    },
+    {
+        "key": "wd",
+        "value": "393x736",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-22T10:23:18.415Z",
+        "lastAccessed": "2024-12-22T10:23:18.415Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61567192725094",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-22T10:23:18.415Z",
+        "lastAccessed": "2024-12-22T10:23:18.415Z"
+    },
+    {
+        "key": "fr",
+        "value": "0dQMMga8bVF1zOqpV.AWWyE_R9Fqp6a9ZgNDvhjbawlBI.Bm_m7t..AAA.0.0.BnYMic.AWUhoHoaP9g",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-22T10:23:18.415Z",
+        "lastAccessed": "2024-12-22T10:23:18.415Z"
+    },
+    {
+        "key": "xs",
+        "value": "26%3AfxRRSuzOr4kAkg%3A2%3A1734396061%3A-1%3A10534",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-22T10:23:18.415Z",
+        "lastAccessed": "2024-12-22T10:23:18.415Z"
+    },
+    {
+        "key": "locale",
+        "value": "vi_VN",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-22T10:23:18.415Z",
+        "lastAccessed": "2024-12-22T10:23:18.415Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101435659%3BT%3A28914383",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-22T10:23:18.415Z",
+        "lastAccessed": "2024-12-22T10:23:18.415Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2701%3Btimestamp%3A1734862992",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-22T10:23:18.415Z",
+        "lastAccessed": "2024-12-22T10:23:18.415Z"
+    }
+]
